[package]
name = "express_rs"
version = "0.0.1"
authors = ["monstercameron <mr.e.cameron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.100"
serde_json = "1.0.40"
serde_derive = "1.0.100"
base64 = "0.10.1"
tokio = "0.1.22"